# BDA_project

./: PYSPARK_ML_METHODS_SUMMARY.md  main.py  pyproject.toml
Data/: online_retail_0910.parquet  online_retail_1011.parquet
Data/online_retail_II.parquet/: .part-00000-189650fa-0de8-40f1-86e9-6294127abad0-c000.snappy.parquet.crc  .part-00000-533abe18-e4b3-43c7-91a3-2e41a1787efc-c000.snappy.parquet.crc  .part-00001-189650fa-0de8-40f1-86e9-6294127abad0-c000.snappy.parquet.crc  .part-00001-533abe18-e4b3-43c7-91a3-2e41a1787efc-c000.snappy.parquet.crc  part-00000-189650fa-0de8-40f1-86e9-6294127abad0-c000.snappy.parquet  part-00000-533abe18-e4b3-43c7-91a3-2e41a1787efc-c000.snappy.parquet  part-00001-189650fa-0de8-40f1-86e9-6294127abad0-c000.snappy.parquet  part-00001-533abe18-e4b3-43c7-91a3-2e41a1787efc-c000.snappy.parquet
Notebooks/: eda.ipynb  graph.ipynb  ml.ipynb  streaming.ipynb
